<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--标题-->
    <RelativeLayout
        android:layout_width="800dp"
        android:layout_height="70dp"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/bu_bc"
            android:id="@+id/back_add"

            />

        <TextView
            android:layout_width="699dp"
            android:layout_height="50dp"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="20dp"
            android:text="@string/add"
            android:textSize="35dp" />
    </RelativeLayout>


    <!--第一行=输入物品名称-->
    <RelativeLayout
        android:layout_width="800dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:text="@string/name"
            android:id="@+id/text_name"/>

        <EditText
            android:id="@+id/add_name"
            android:layout_width="699dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:maxLength="11"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:background="@null"
            android:hint="请输入物品名称"
            android:layout_toRightOf="@id/text_name"/>
    </RelativeLayout>


    <!--第二行添加备注-->
    <RelativeLayout
        android:layout_width="800dp"
        android:layout_height="50dp">


        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:text="@string/other"
            android:id="@+id/text_other"/>

        <EditText
            android:id="@+id/add_other"
            android:layout_toRightOf="@id/text_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:background="@null"
            android:maxLength="16"
            android:padding="10dp"
            android:hint="备注"
            />
    </RelativeLayout>

    <!--添加第三行生产日期date1-->


    <RelativeLayout
        android:layout_width="800dp"
        android:layout_height="50dp">


        <TextView
            android:layout_width="90dp"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:layout_height="50dp"
            android:text="@string/date1"
            android:id="@+id/text_date1" />


        <EditText
            android:id="@+id/add_date1"
            android:layout_toRightOf="@id/text_date1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:drawablePadding="10dp"
            android:maxLength="16"
            android:padding="10dp"
            android:hint="备注" />


    </RelativeLayout>


    <!--第四行添加提醒日期date2-->


    <RelativeLayout
        android:layout_width="800dp"
        android:layout_height="50dp">


        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:text="@string/date2"
            android:id="@+id/text_date2"/>


        <EditText
            android:id="@+id/add_date2"
            android:layout_toRightOf="@id/text_date2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:drawablePadding="10dp"
            android:hint="备注"
            android:maxLength="16"
            android:padding="10dp" />
    </RelativeLayout>

    <!--添加第五行提醒日期date3-->

    <RelativeLayout
        android:layout_width="800dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:id="@+id/text_reminder"
            android:text="@string/date3"
            />

        <EditText
            android:id="@+id/add_date3"
            android:layout_toRightOf="@id/text_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:maxLength="16"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:hint="备注"
            />
    </RelativeLayout>


    <!--添加照片-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="80dp"
            android:paddingTop="16dp"
            android:textSize="18dp"
            android:text="@string/photo"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/bu_ca"
            />

        <!--选择物品类别和确定按钮-->

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="28dp"
                android:paddingTop="90dp"
                android:text="@string/category"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="248dp"
                android:layout_height="40dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="20dp"
                android:entries="@array/dock1"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="80dp"
                android:src="@mipmap/bu_cn"
                android:id="@+id/but_con"
                android:layout_below="@+id/spinner_category"/>

        </RelativeLayout>
    </RelativeLayout>




</LinearLayout>
